--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8082
 
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
 
 security:
   jwt:
@@ -29,7 +33,9 @@ api:
       delete: Удалить категорию
     determination:
       labels: Получить все возможные наименования продуктов нейронной модели
-      predict: Сделать предсказание по фотографии
+      predict:
+        collection: Сделать предсказание по фотографии и получить коллекцию продуктов
+        single: Сделать предсказание по фотографии и получить продукт
       train: Запустить процесс обучения нейронной модели
     product:
       create: Добавить новый продукт
@@ -39,3 +45,4 @@ api:
       parse: Запустить процесс парсинга отзывов по id продукта
       category:
         name: Найти продукты по наименованию категории
+        alias: Найти продукту по псевдониму категории
