--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,9 @@ feign:
     productdetermination:
       name: product-determination-service
       url: localhost:8081/api/v1/determination
+logging:
+  pattern:
+    console: %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level %logger{15} - %msg%n
 
 api:
   swagger:
